deploy/02-deploy/06-console/010-Deployment-backend.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: console-backend
  labels:
    app: console-backend
  annotations:
    image.openshift.io/triggers: |
      [{
        "from":{
          "kind":"ImageStreamTag",
          "name":"console-backend:latest"
        },
        "fieldPath":"spec.template.spec.containers[?(@.name==\"endpoint\")].image"
      }]
spec:
  replicas: 1
  selector:
    matchLabels:
      app: console-backend
  template:
    metadata:
      labels:
        app: console-backend
    spec:
      containers:
        - name: endpoint
          image: quay.io/ctrontesting/console-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: endpoint
              protocol: TCP
          resources:
            limits:
              memory: 64Mi
