deploy/02-deploy/06-console/010-Deployment-frontend.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: console-frontend
  labels:
    app: console-frontend
  annotations:
    image.openshift.io/triggers: |
      [{
        "from":{
          "kind":"ImageStreamTag",
          "name":"console-frontend:latest"
        },
        "fieldPath":"spec.template.spec.containers[?(@.name==\"endpoint\")].image"
      }]
spec:
  replicas: 1
  selector:
    matchLabels:
      app: console-frontend
  template:
    metadata:
      labels:
        app: console-frontend
    spec:
      containers:
        - name: endpoint
          image: quay.io/ctrontesting/console-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: endpoint
              protocol: TCP
          resources:
            limits:
              memory: 64Mi
          volumeMounts:
            - mountPath: /run
              name: run
      volumes:
        - name: run
          emptyDir: {}
