deploy/02-deploy/06-console/020-Service-backend.yaml
kind: Service
apiVersion: v1
metadata:
  name: console-backend
  labels:
    app: console-backend
spec:
  selector:
    app: console-backend
  ports:
    - name: endpoint
      protocol: TCP
      port: 8080
      targetPort: endpoint
