deploy/02-deploy/06-console/050-Service-frontend.yaml
kind: Service
apiVersion: v1
metadata:
  name: console-frontend
  labels:
    app: console-frontend
spec:
  selector:
    app: console-frontend
  ports:
    - name: endpoint
      protocol: TCP
      port: 8080
      targetPort: endpoint
