deploy/02-deploy/06-console/030-Route-backend.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: console-backend
spec:
  to:
    kind: Service
    name: console-backend
  port:
    targetPort: endpoint
  tls:
    termination: edge
