deploy/02-deploy/06-console/060-Route-frontend.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: console
spec:
  to:
    kind: Service
    name: console-frontend
  port:
    targetPort: endpoint
  tls:
    termination: edge
